@@ -2,61 +2,66 @@
 # this repository contains the full copyright notices and license terms.
 
 from trytond.pool import Pool
-from .location import *
-from .shipment import *
-from .period import *
-from .move import *
-from .product import *
+from . import location
+from . import shipment
+from . import period
+from . import move
+from . import product
 from . import inventory
-from .configuration import *
+from . import configuration
 from . import party
+
+from .move import StockMixin
+
+__all__ = ['StockMixin', 'register']
 
 
 def register():
     Pool.register(
-        Location,
-        Party,
-        PartyLocation,
-        ProductsByLocationsContext,
-        LocationLeadTime,
-        Move,
-        ShipmentIn,
-        ShipmentInReturn,
-        ShipmentOut,
-        ShipmentOutReturn,
-        AssignShipmentOutAssignFailed,
-        ShipmentInternal,
-        Address,
-        AssignShipmentInternalAssignFailed,
-        AssignShipmentInReturnAssignFailed,
-        Period,
-        Cache,
-        Template,
-        Product,
-        ProductByLocationContext,
-        ProductQuantitiesByWarehouse,
-        ProductQuantitiesByWarehouseContext,
+        location.Location,
+        location.Party,
+        location.PartyLocation,
+        location.ProductsByLocationsContext,
+        location.LocationLeadTime,
+        move.Move,
+        shipment.ShipmentIn,
+        shipment.ShipmentInReturn,
+        shipment.ShipmentOut,
+        shipment.ShipmentOutReturn,
+        shipment.AssignShipmentOutAssignFailed,
+        shipment.ShipmentInternal,
+        shipment.Address,
+        shipment.AssignShipmentInternalAssignFailed,
+        shipment.AssignShipmentInReturnAssignFailed,
+        period.Period,
+        period.Cache,
+        product.Template,
+        product.Product,
+        product.ProductByLocationContext,
+        product.ProductQuantitiesByWarehouse,
+        product.ProductQuantitiesByWarehouseContext,
         inventory.Inventory,
         inventory.InventoryLine,
         inventory.CountSearch,
         inventory.CountQuantity,
-        Configuration,
-        ConfigurationSequence,
-        ConfigurationLocation,
+        configuration.Configuration,
+        configuration.ConfigurationSequence,
+        configuration.ConfigurationLocation,
         module='stock', type_='model')
     Pool.register(
-        AssignShipmentOut,
-        AssignShipmentInternal,
-        AssignShipmentInReturn,
-        RecomputeCostPrice,
+        shipment.AssignShipmentOut,
+        shipment.AssignShipmentInternal,
+        shipment.AssignShipmentInReturn,
+        product.OpenProductQuantitiesByWarehouse,
+        product.RecomputeCostPrice,
         inventory.Count,
         party.PartyReplace,
         party.PartyErase,
         module='stock', type_='wizard')
     Pool.register(
-        DeliveryNote,
-        PickingList,
-        SupplierRestockingList,
-        CustomerReturnRestockingList,
-        InteralShipmentReport,
+        shipment.DeliveryNote,
+        shipment.PickingList,
+        shipment.SupplierRestockingList,
+        shipment.CustomerReturnRestockingList,
+        shipment.InteralShipmentReport,
         module='stock', type_='report')
