@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<tree>
+<tree keyword_open="1">
     <field name="date"/>
     <field name="quantity"/>
 </tree>
