@@ -1,3 +1,5 @@
+* Open product quantities by warehouse to show moves
+
 Version 5.2.0 - 2019-05-06
 * Bug fixes (see mercurial logs for details)
 * Don't set default unit price on stock move
